--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "axiosts-petstore2": "kodgen generate --config ./kodgen-typescript/axios-typescript/petstore2/config.json",
     "fetchts-petstore2": "kodgen generate --config ./kodgen-typescript/fetch-typescript/petstore2/config.json",
+    "axiosts-petstore2-classes": "kodgen generate --config ./kodgen-typescript/axios-typescript/petstore2/config-classes.json",
+    "fetchts-petstore2-classes": "kodgen generate --config ./kodgen-typescript/fetch-typescript/petstore2/config-classes.json",
     "ngts-petstore2": "kodgen generate --config ./kodgen-typescript/ng-typescript/petstore2/config.json",
     "ngts-petstore3": "kodgen generate --config ./kodgen-typescript/ng-typescript/petstore3/config.json"
   },
