--- a/kodgen-typescript/axios-typescript/petstore2/config-classes.json
+++ b/kodgen-typescript/axios-typescript/petstore2/config-classes.json
@@ -4,6 +4,6 @@
 	"generator": "axios-typescript",
 	"generatorConfigFile": "classes-generator-config.json",
 	"input": "swagger.json",
-	"output": "./out",
+	"output": "./out-classes",
 	"clean": true
 }
