--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "axiosts-petstore2": "kodgen generate --config ./kodgen-typescript/axios-typescript/petstore2/config.json",
     "fetchts-petstore2": "kodgen generate --config ./kodgen-typescript/fetch-typescript/petstore2/config.json",
     "ngts-petstore2": "kodgen generate --config ./kodgen-typescript/ng-typescript/petstore2/config.json",
-    "ngts-petstore3": "kodgen generate --config ./kodgen-typescript/ng-typescript/petstore3/config.json"
+    "ngts-petstore3": "kodgen generate --config ./kodgen-typescript/ng-typescript/petstore3/config.json",
+    "ngts-loopback-todo": "kodgen generate --config ./kodgen-typescript/ng-typescript/loopback-todo/config.json"
   },
   "author": "",
   "license": "ISC",
